# network_flow_agent

./: README.md  footnotes.txt  instructions.txt  pyproject.toml  run_instructions.txt
.github/workflows/: tests.yml
scripts/: send_json_udp_samples.py
src/flow_agent_mcp/: __init__.py
src/flow_agent_mcp/capabilities/: __init__.py
src/flow_agent_mcp/capabilities/baseline_anomaly/: __init__.py  baseline.py  capability.py  shift.py
src/flow_agent_mcp/capabilities/ipfix_udp/: capability.py  decoder.py
src/flow_agent_mcp/capabilities/jflow_udp/: capability.py  decoder.py
src/flow_agent_mcp/capabilities/json_udp/: capability.py
src/flow_agent_mcp/capabilities/netflow_udp/: capability.py  decoder.py
src/flow_agent_mcp/capabilities/sflow_udp/: __init__.p  capability.py  decoder.py
src/flow_agent_mcp/cli/: __init__.py  run_server.py
src/flow_agent_mcp/core/: __init__.py  capability_base.py  dedupe.py  models.py  monitor.py  registry.py  server.py  store.py
tests/: conftest.py  test_baseline_anomaly.py  test_collectors_udp.py  test_decoders_ipfix.py  test_decoders_jflow.py  test_decoders_netflow.py  test_decoders_sflow.py  tests_strategy.txt
tests/capabilities/: test_capability_loading.py  test_json_udp_decode.py
tests/core/: test_monitor.py  test_registry.py  test_store.py
