[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flow_agent_mcp"
version = "0.1.0"
description = "Protocol neutral MCP server with pluggable flow collectors and latency alerts"
requires-python = ">=3.11"
dependencies = [
  "mcp",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
